Started pt 2 of HW5

--- a/HW5/.vscode/launch.json
+++ b/HW5/.vscode/launch.json
@@ -18,7 +18,7 @@
             "request": "launch",
             "mainClass": "MergeSort",
             "projectName": "HW5_59c36484",
-            "args": "in/12.in"
+            "args": "in/1000000.in"
         },
         {
             "type": "java",
