--- a/HW6/HW/Ex2/.vscode/launch.json
+++ b/HW6/HW/Ex2/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Subsetw",
+            "request": "launch",
+            "mainClass": "Subsetw",
+            "projectName": "Ex2_e0e4ffb1"
+        },
+        {
+            "type": "java",
             "name": "Launch Current File",
             "request": "launch",
             "mainClass": "${file}"
